workspace = { members = ["fs", "time"] }
[package]
name = "iron_log"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.iron]
git = "https://e.coding.net/g-dbqm0893/IronLog/iron.git"

[dependencies.fs]
path = "fs"
optional = true

[dependencies.time]
path = "time"
optional = true

[features]
default = []
advanced_fs = ["fs"]
advanced_time = ["time"]
dev = ["default","advanced_fs","advanced_time"]