workspace = { members = ["fs", "time"] }
[package]
name = "iron_log"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.fs]
path = "fs"
optional = true

[dependencies.time]
path = "time"
optional = true

[dependencies.iron]
git = "https://e.coding.net/g-dbqm0893/IronLog/iron.git"
version = "0.2.0"

[features]
default = []
advanced_fs = ["fs"]
advanced_time = ["time"]
dev = ["default","advanced_fs","advanced_time"]